# py-unisign

./: README.md  pyproject.toml
.github/workflows/: lint.yml  python-publish.yml  test.yml  typecheck.yml
src/unisign/: __init__.py  __main__.py
tests/: test_unisign.py
