[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unisign"
version = "0.0.0.dev0"
description = "Unifying various python signing implementations"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["cryptography", "sign", "signing"]
authors = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
maintainers = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
dependencies = []

[dependency-groups]
lint = ["ruff"]
typecheck = ["mypy"]
dev = [{include-group = "lint"}, {include-group = "typecheck"}]
test = ["pytest"]
cover = [{include-group = "test"}, "pytest-cov"]
multitest = ["tox"]
doc = ["sphinx", "sphinx-argparse"]

[tool.setuptools.packages.find]
where = ["src"]
