[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unisign"
version = "0.0.0.dev1"
description = "Unifying various python signing implementations"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["cryptography", "sign", "signing"]
authors = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
maintainers = [
    {name = "Suhas Krishna Srivastava", email = "suhas.srivastava@vaastav.tech"}
]
license = "Apache-2.0"
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",

    "Topic :: Education",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development",

    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]
dependencies = []

[dependency-groups]
lint = ["ruff"]
typecheck = ["mypy"]
dev = [{include-group = "lint"}, {include-group = "typecheck"}]
test = ["pytest"]
cover = [{include-group = "test"}, "pytest-cov"]
multitest = ["tox"]
doc = ["sphinx", "sphinx-argparse"]

[tool.setuptools.packages.find]
where = ["src"]
